# ai-job-radar

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  run.yml
ai_job_radar/: __init__.py  __main__.py  cli.py  config.py  db.py  notifier.py  pipeline.py  scorer.py  sources.py
data/: cv.md  preferences.yml
tests/: test_db.py  test_scorer.py  test_sources.py
